# cube2-Internal

./: CMakeLists.txt  CMakePresets.json  README.md
libs/: .gitignore  CMakeLists.txt
libs/imgui/: CMakeLists.txt
src/: CMakeLists.txt  Math.cpp  Math.hpp  dllmain.cpp  glDraw.cpp  glDraw.hpp  internal.cpp  internal.hpp  internal_x64.cpp  main.cpp  player.h
src/Game/: CMakeLists.txt
src/Game/include/Game/: Player.h
src/Internal/: CMakeLists.txt  Internal.cpp
src/Math/: CMakeLists.txt  Math.cpp
src/Math/include/Math/: Math.hpp  Math_fwd.hpp
src/Renderer/: CMakeLists.txt  Renderer.cpp
src/Renderer/include/Renderer/: Renderer.hpp
